b2brp-frontend/kubernetes/b2brp-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: b2brp-frontend
  namespace: b2brp
  labels:
    name: b2brp-frontend
spec:
  rules:
    - host: b2brp.mucks.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: b2brp-frontend-svc
                port:
                  number: 80
